# rocket-lab-genai

./: .envexample  .gitignore  README.md  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: chat_router.py
backend/app/schemas/: chat_schema.py
backend/app/services/: chat_service.py  session_store.py
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/services/: chatApi.ts
src/text2sql/: __init__.py  agent.py  config.py  db.py  models.py  service.py
tests/: test_plan.md
